--- a/static/about.html
+++ b/static/about.html
@@ -70,7 +70,7 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
             <b>-Avoid crawlers/spammers</b>: imaged text will be "invisible" to those robots<br>
             <b>-Keep styles</b>: imaged text is styled as is, it will not change in different web pages<br>
             <h2>Any limits on text size?</h2>
-            A single text is limited to under 500 lines due to performance concern, however you can convert whatever amount of text as you wish.
+            A single text is limited to under 500 lines due to performance concern, however you can convert whatever amount of text as you want.
             <h2>How long will you keep the image?</h2>
             The converted images will stick around forever.
         </div>
